Flexbox actually makes this Firefox layout bug worse!
I was hoping this would fix a bug in Firefox where the Position and Length boxes can shrink to the size of the text within them instead of lining up with the wave display in height, but it made it worse. (Perhaps it's closer to a solution though...)

--- a/programs/sound-recorder/src/sound-recorder.css
+++ b/programs/sound-recorder/src/sound-recorder.css
@@ -40,14 +40,14 @@ body,
 	flex-shrink: 0;
 	height: 100%;
 	box-sizing: border-box;
-	display: table;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	white-space: nowrap;
 }
 .position .center-me,
 .length .center-me {
-	display: table-cell;
 	text-align: center;
-	vertical-align: middle;
 }
 
 .controls {
